2010-03-15  Dirk Bergstrom  <krid@otisbean.com>

	* appinfo.json: Change version number to 0.3.0, since the changes seem
	to warrant it.

	* icon.png: Vastly improved icon courtesy of Alberto Dominguez (chav1to).
	
	* images/lock.png, open-lock.png: New images from clipart provided by
	chav1to.

2010-03-14  Dirk Bergstrom  <krid@otisbean.com>

	* app/assistants/item-assistant.js (originalTitle): Renamed to
	titleInDatabase for clarity.
	(cancel): Deletion of saved item could affect the wrong record.  Use
	titleInDatabase instead of item.title to ensure that we get the right one.
	
    * app/assistants/item-list-assistant.js (sortPopupHandler): Reset
    list length flag so that scrolling will correctly reveal more items.
    Scroll list back to the top because it looks better.
    (activate): Reset list length flag.
    Continuation of the fix for gh-20.

	* app/views/help/help-scene.html: Forgot to note a change.

2010-03-12  Dirk Bergstrom  <krid@otisbean.com>

Closes gh-19: Tapping in the title field while editing results in multiple...
Closes gh-18:  Duplicate title check works, but doesn't give any indication...
Closes gh-17: Requiring explicit save on item create can lead to data loss...
	* app/assistants/item-assistant.js (fieldUpdated): Improve error handling
	and fix title tracking.
	(done): If there is a bad field value, put up an error dialog instead
	of popping the scene.
	(cancel): Delete the new item if it has been automatically saved.
	(setTitle, activate, TitleDialogAssistant): Ensure that new items have
	a title, and that it is unique.
	(activate, deactivate, timeoutOrDeactivate): Don't special-case item
	creation.

    * app/models/ring.js (updateItem): Check for empty title, and simplify
    error reporting.
    
Closes gh-25: Starting up as a "lightweight" app creates an extra process
	* app/assistants/app-assistant.js: Renamed to stage-assistant.js, and
	reworked to load the app in a standard way.  The old system resulted