@@ -134,13 +134,14 @@ AppEngine service.</li>
 <div class="palm-info-text">
 <h4>Change Log</h4>
 <ul>
-<li>Version 0.2.1 - 2010-03-12<br />
+<li>Version 0.3.0 - 2010-03-15<br />
  - Creating a new item no longer requires explicit save, so you won't lose
  data if the app times out before you save.<br />
  - Tapping in the title field while editing no longer creates spurious records.<br />
  - Fixed bug in duplicate item title detection.<br />
  - Fixed a bug where after importing a large number of records, not all of them
- would be immediately visible in the scrolling list.
+ would be immediately visible in the scrolling list.<br />
+ - Pretty new icon courtesy of Alberto Dominguez (chav1to).<br />
  - Changed app startup mechanism to reduce resource consumption.<br />
  - Fixed item scene formatting problems under webOS 1.4.
 </li>
